--- a/src/pages/common/game-nav.css
+++ b/src/pages/common/game-nav.css
@@ -54,3 +54,24 @@ li:hover > sff-go {
   box-shadow: 0px 1px 3px 0px hsla(0deg, 0%, 8%, 0.15);
   color: var(--dk-on-primary-color, var(--lt-on-primary-color));
 }
+
+.inbox a {
+  position: relative;
+}
+
+.badge {
+  background-color: var(--dk-primary-color-300);
+  border-radius: 50%;
+  display: inline-block;
+  color: var(--dk-on-primary-color);
+  font-size: 0.75rem;
+  font-weight: bold;
+  height: 1rem;
+  line-height: 1rem;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+  transform: translate(80%, -25%);
+  width: 1rem;
+}
