spit trade and offers in two pages and add badge for new offers

--- a/src/pages/common/game-nav.css
+++ b/src/pages/common/game-nav.css
@@ -55,7 +55,8 @@ li:hover > sff-go {
   color: var(--dk-on-primary-color, var(--lt-on-primary-color));
 }
 
-.inbox a {
+.inbox a,
+.offers a {
   position: relative;
 }
 
