--- a/src/pages/team/team-page.css
+++ b/src/pages/team/team-page.css
@@ -18,14 +18,35 @@ sff-team {
 }
 
 .team-main > :first-child {
-  flex-grow: 2;
+  flex-grow: 1;
   /* this value should match ENTIRE_PITCH_WIDTH */
   max-width: calc((66px + 3px * 2) * 12);
   overflow: auto;
 }
 
+.cnt-controls {
+  background-color: var(--dk-bg-color-750);
+  border-radius: 5px;
+  box-shadow: 0px 1px 3px 0px rgba(19, 19, 19, 0.26);
+  max-width: max-content;
+  padding: 4px 8px;
+}
+
+.cnt-controls > h3 {
+  margin: 0;
+}
+
 .controls {
-  flex-grow: 0.5;
+  margin: 0.5rem 0;
+  padding-left: 1rem;
+}
+
+.controls > li {
+  background-color: var(--dk-bg-color-700);
+  border-radius: 5px;
+  list-style-type: none;
+  margin-bottom: 5px;
+  padding: 2px 0.25rem;
 }
 
 .cnt-pitch {
