--- a/src/pages/team/team-page.css
+++ b/src/pages/team/team-page.css
@@ -30,6 +30,13 @@ sff-team {
   box-shadow: 0px 1px 3px 0px rgba(19, 19, 19, 0.26);
   max-width: max-content;
   padding: 4px 8px;
+  position: relative;
+}
+
+.info-link {
+  position: absolute;
+  right: 4px;
+  top: 4px;
 }
 
 .cnt-controls > h3 {
