--- a/src/pages/common/game-nav.css
+++ b/src/pages/common/game-nav.css
@@ -22,15 +22,15 @@ ul {
 }
 
 li {
-  transition: background-color 0.2s;
   list-style-type: none;
+  transition: background-color 0.2s;
 }
 
 li:hover {
   background-color: var(--dk-primary-color, var(--lt-primary-color));
 }
 
-sff-go {
+.rt-link {
   display: inline-block;
   color: var(--dk-on-bg-color, var(--lt-on-db-color));
   cursor: pointer;
@@ -38,25 +38,21 @@ sff-go {
   padding: 0.5rem 1rem;
   transition: color 0.25s;
   width: 100%;
-}
-
-.home > sff-go {
-  border-bottom: 1px solid var(--dk-bg-color-500);
-}
-
-a {
-  color: inherit;
   text-decoration: none;
   text-transform: capitalize;
 }
 
-li:hover > sff-go {
+.home > .rt-link {
+  border-bottom: 1px solid var(--dk-bg-color-500);
+}
+
+li:hover > .rt-link {
   box-shadow: 0px 1px 3px 0px hsla(0deg, 0%, 8%, 0.15);
   color: var(--dk-on-primary-color, var(--lt-on-primary-color));
 }
 
-.inbox a,
-.offers a {
+.inbox > .rt-link > span,
+.offers > .rt-link > span {
   position: relative;
 }
 
