add title to all modals and restyle some modals around

--- a/src/pages/common/sim-controls.css
+++ b/src/pages/common/sim-controls.css
@@ -85,3 +85,8 @@ btn-sim-options > .btn {
   position: absolute;
   top: -100%;
 }
+
+.play-btn {
+  padding-left: 0.6rem;
+  padding-right: 0.6rem;
+}
