--- a/src/pages/team/change-spot.css
+++ b/src/pages/team/change-spot.css
@@ -12,22 +12,16 @@ change-pos {
   background-color: green;
   border: 1px solid white;
   height: 64vw;
+  /* preserve the proportion PITCH_HEIGHT / PITCH_WIDTH */
+  margin: -1rem auto 0 auto;
+  max-width: 100vh;
+  max-height: 80vh;
   /* this values should match PITCH_WIDTH  and PITCH_HEIGHT */
   min-width: calc(66px * 4.8);
   min-height: calc(52px * 4.8);
-  /* preserve the proportion PITCH_HEIGHT / PITCH_WIDTH */
-  max-width: 100vh;
-  max-height: 80vh;
+  padding: 0;
   position: relative;
   width: 80vw;
-}
-
-.sub {
-  background-color: hsla(275deg, 4%, 16%, 0.75);
-  border-radius: 0 0 5% 0;
-  display: inline-block;
-  font-size: 0.9rem;
-  padding: 0.25rem 2px;
 }
 
 .spot {
@@ -72,9 +66,10 @@ change-pos {
 
 .sub-name {
   font-style: italic;
-  font-weight: bold;
+  white-space: nowrap;
 }
 
 .sub-pos {
   text-transform: uppercase;
+  font-size: 0.7em;
 }
