add some footer informations and fix some accessibility issues

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   --lt-on-positive-color: var(--lt-on-bg-color);
   --lt-positive-color-tsp-300: hsla(133, 58%, 66%, 0.7);
   --lt-error-color: #eb5d5d;
-  --lt-on-error-color: white;
+  --lt-on-error-color: black;
   --lt-neutral-color: #e1c457;
 
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -47,7 +47,7 @@
   --dk-on-positive-color: var(--lt-on-bg-color);
   --dk-positive-color-tsp-300: var(--lt-positive-color-tsp-300);
   --dk-error-color: var(--lt-error-color);
-  --dk-on-error-color: white;
+  --dk-on-error-color: hsl(275deg, 4%, 8%);
   --dk-neutral-color: var(--lt-neutral-color);
 }
 
