--- a/src/pages/common/game-page.css
+++ b/src/pages/common/game-page.css
@@ -1,3 +1,5 @@
+@import "./fork-me.css";
+
 :host {
   display: block;
 }
@@ -18,13 +20,35 @@ div[slot="in-main"] {
   min-height: calc(100vh - var(--header-height));
 }
 
-/* ----------------- temporary stuff ---------------------- */
 [slot="in-footer"] {
   background-color: var(--dk-bg-color-725, var(--lt-bg-color));
   border-top: 1px solid var(--dk-bg-color-500, var(--lt-bg-color-100));
+  display: flex;
   height: 100%;
+  padding: 0 1rem;
 }
 
-[slot="in-footer"] > * {
+.fork-gh,
+.footer-infos {
   margin: 0;
+  padding: 0;
+}
+
+.fork-gh {
+  margin-left: auto;
+}
+
+.footer-infos {
+  align-items: center;
+  display: flex;
+  gap: 1rem;
+}
+
+.footer-infos > li {
+  list-style-type: none;
+}
+
+[slot="in-footer"] a {
+  color: var(--dk-on-bg-color, var(--lt-on-bg-color));
+  text-decoration: none;
 }
