--- a/src/pages/util/modal.css
+++ b/src/pages/util/modal.css
@@ -1,4 +1,5 @@
 @import "../util/button.css";
+@import "../util/dialog.css";
 
 :host {
   display: block;
@@ -14,12 +15,9 @@ dialog {
     var(--dk-bg-color-725, var(--lt-bg-color))
   );
   border: 2px solid var(--dk-bg-color-700);
-  border-radius: 5px;
   box-shadow: 0px 2px 4px 0px hsl(0deg 0% 4% / 40%);
-  color: var(--dk-on-bg-color, var(--lt-on-bg-color));
   max-width: 100%;
   max-height: 100%;
-  padding: 5px 1rem 1rem 1rem;
   transition: opacity 0.4s;
 }
 
@@ -33,24 +31,10 @@ dialog::backdrop {
   opacity: 0;
 }
 
-.dig-head {
-  border-bottom: 1px solid var(--dk-bg-color-500, var(--lt-bg-color-200));
-  display: flex;
-  gap: 2rem;
-  min-height: 30px;
-  margin-bottom: 1rem;
-}
-
-.modal-close {
-  align-self: start;
-  margin-left: auto;
-}
-
 ::slotted(:not([slot])) {
   padding: 0 1rem;
 }
 
 ::slotted([slot="title"]) {
   margin: 0;
-  padding-left: 5px;
 }
