--- a/src/pages/common/game-nav.css
+++ b/src/pages/common/game-nav.css
@@ -30,7 +30,7 @@ li:hover {
   background-color: var(--dk-primary-color, var(--lt-primary-color));
 }
 
-.rt-link {
+a {
   display: inline-block;
   color: var(--dk-on-bg-color, var(--lt-on-db-color));
   cursor: pointer;
@@ -42,17 +42,17 @@ li:hover {
   text-transform: capitalize;
 }
 
-.home > .rt-link {
+.home > a {
   border-bottom: 1px solid var(--dk-bg-color-500);
 }
 
-li:hover > .rt-link {
+li:hover > a {
   box-shadow: 0px 1px 3px 0px hsla(0deg, 0%, 8%, 0.15);
   color: var(--dk-on-primary-color, var(--lt-on-primary-color));
 }
 
-.inbox > .rt-link > span,
-.offers > .rt-link > span {
+.inbox > a > span,
+.offers > a > span {
   position: relative;
 }
 
