--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -62,3 +62,9 @@ body {
   color: var(--dk-on-bg-color, var(--lt-on-bg-color));
   margin: 0;
 }
+
+.cnt-404 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
