--- a/src/pages/util/layout.css
+++ b/src/pages/util/layout.css
@@ -42,7 +42,6 @@ nav {
   }
 
   nav {
-    display: none;
     position: fixed;
     width: 100vw;
     z-index: 3;
@@ -50,6 +49,10 @@ nav {
 
   .btn-toggle-nav {
     display: block;
+  }
+
+  .mb-nav-close {
+    display: none;
   }
 }
 
