add team captain

--- a/src/pages/team/team-page.css
+++ b/src/pages/team/team-page.css
@@ -228,6 +228,10 @@ rect.playing-pitch {
 }
 
 .sqd-number {
-  font-style: italic;
   font-weight: bold;
+}
+
+.captain,
+.sqd-number {
+  font-style: italic;
 }
